--- a/package.json
+++ b/package.json
@@ -28,29 +28,17 @@
     "dotenv": "^16.3.1",
     "viem": "^2.0.0",
     "ethers": "^6.10.0",
-    "x402-axios": "^1.0.0",
-    "x402-fetch": "^1.0.0",
-    "taapi": "^1.4.8",
     "openai": "^4.26.0",
-    "anthropic": "^0.16.0",
-    "google-generative-ai": "^0.3.0",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
     "zod": "^3.22.4",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "rate-limiter-flexible": "^3.0.0"
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
-    "vitest": "^1.1.0",
-    "eslint": "^8.56.0",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "prettier": "^3.1.1"
+    "typescript": "^5.3.3"
   }
 }
