--- a/.env.example
+++ b/.env.example
@@ -3,26 +3,20 @@ PORT=3000
 NODE_ENV=development
 LOG_LEVEL=info
 
+# Wallet Configuration (for x402 payments to other endpoints)
+# This wallet pays AIXBT, TAAPI, Dreams, and other x402 endpoints
+WALLET_PRIVATE_KEY=your_wallet_private_key_here
+
 # x402 Payment Configuration (Micropayment Protocol)
-X402_RECIPIENT_ADDRESS=0x...
+# Vibe Trade receives x402 payments from clients
+X402_RECIPIENT_ADDRESS=0xyour_vibe_trade_address
 X402_NETWORK=base-sepolia
 X402_PAYMENT_AMOUNT=100000
 
-# Dreams LLM Router Configuration (x402 Micropayments)
-# x402 is a payment protocol - no API key needed
-# Clients pay via x402 to access this endpoint
+# x402 Endpoint URLs (NO API KEYS - x402 handles authentication)
+AIXBT_ENDPOINT=https://api.aixbt.tech/x402/agents/indigo
+TAAPI_ENDPOINT=https://api.taapi.io/x402
 DREAMS_ROUTER_URL=https://router.daydreams.systems
-
-# TAAPI Configuration
-TAAPI_API_KEY=your_taapi_api_key
-TAAPI_BASE_URL=https://api.taapi.io
-
-# AIXBT Configuration
-AIXBT_API_KEY=your_aixbt_api_key
-AIXBT_BASE_URL=https://api.aixbt.tech
-
-# Hyperliquid Configuration
-HYPERLIQUID_PRIVATE_KEY=your_hyperliquid_private_key
 HYPERLIQUID_API_URL=https://api.hyperliquid.xyz
 HYPERLIQUID_TESTNET_URL=https://api.hyperliquid-testnet.xyz
 HYPERLIQUID_USE_TESTNET=true
