--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^16.3.1",
     "viem": "^2.0.0",
     "ethers": "^6.10.0",
+    "x402-axios": "^1.0.0",
+    "x402-fetch": "^1.0.0",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
     "zod": "^3.22.4",
