Integrate real x402 data sources: TAAPI, AIXBT with parallel calls and automatic payment handling

--- a/dreams/.env.example
+++ b/dreams/.env.example
@@ -26,11 +26,14 @@ FACILITATOR_URL=https://facilitator.daydreams.systems
 PAY_TO=0xb308ed39d67D0d4BAe5BC2FAEF60c66BBb6AE429
 # Optional. Default price (in wei) when no entrypoint price is set.
 # Vibe Trade entrypoint: 100000 wei = $0.10 USDC
-DEFAULT_PRICE=1000
+DEFAULT_PRICE=100000
+
+# x402 Data Source Endpoints
+# These are the endpoints Vibe Trade calls to get market data
+TAAPI_ENDPOINT=https://api.taapi.io/x402
+AIXBT_ENDPOINT=https://api.aixbt.tech/x402/agents/indigo
+DREAMS_ROUTER_URL=https://router.daydreams.systems
 
 # Secrets
-# Required. Used to sign payment requests with the agent wallet.
-PRIVATE_KEY=
-
-# Required for AXLLM - but can be ignored
-OPENAI_API_KEY=THIS-WILL-NOT-BE-USED
+# Required. Used to sign payment requests with the agent wallet (for calling other x402 endpoints).
+PRIVATE_KEY=your_wallet_private_key_here
