Use TAAPI standard API instead of x402 endpoint

--- a/dreams/.env.example
+++ b/dreams/.env.example
@@ -28,12 +28,16 @@ PAY_TO=0xb308ed39d67D0d4BAe5BC2FAEF60c66BBb6AE429
 # Vibe Trade entrypoint: 100000 wei = $0.10 USDC
 DEFAULT_PRICE=100000
 
-# x402 Data Source Endpoints
-# These are the endpoints Vibe Trade calls to get market data
-TAAPI_ENDPOINT=https://api.taapi.io/x402
+# Data Source Configuration
+# TAAPI - Standard REST API (not x402)
+TAAPI_API_KEY=your_taapi_api_key_here
+
+# AIXBT - x402 Endpoint
 AIXBT_ENDPOINT=https://api.aixbt.tech/x402/agents/indigo
+
+# Dreams LLM Router
 DREAMS_ROUTER_URL=https://router.daydreams.systems
 
 # Secrets
-# Required. Used to sign payment requests with the agent wallet (for calling other x402 endpoints).
+# Required. Used to sign payment requests with the agent wallet (for calling x402 endpoints like AIXBT).
 PRIVATE_KEY=your_wallet_private_key_here
